--- a/www/tab3/tab3.scss
+++ b/www/tab3/tab3.scss
@@ -64,5 +64,6 @@
 
   .matching-interest-container {
     padding-top: 10px;
+    white-space: normal;
   }
 }
